pi-parser/test-data/snapshots/pi_parser__tests__parse_basic_literals_float.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  FloatLit:
    negative:
      node: false
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    bits: 32
    val:
      node: 1.0
      span:
        range:
          start: 0
          end: 3
        file_id: 0
span:
  range:
    start: 0
    end: 3
  file_id: 0

