pi-parser/test-data/snapshots/pi_parser__tests__parse_basic_literals_float_neg_sep.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  FloatLit:
    negative:
      node: true
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    bits: 32
    val:
      node: 1.0
      span:
        range:
          start: 1
          end: 8
        file_id: 0
span:
  range:
    start: 0
    end: 8
  file_id: 0

